--- a/Lab2/requirements.txt
+++ b/Lab2/requirements.txt
@@ -1,9 +1,12 @@
-click==8.0.4
-Faker==13.3.2
-Flask==2.0.3
-itsdangerous==2.1.1
-Jinja2==3.0.3
-MarkupSafe==2.1.1
-python-dateutil==2.8.2
-six==1.16.0
-Werkzeug==2.0.3
+blinker==1.8.2
+click==8.1.8
+flask==3.0.3
+gunicorn==23.0.0
+importlib-metadata==8.5.0
+itsdangerous==2.2.0
+jinja2==3.1.6
+MarkupSafe==2.1.5
+packaging==24.2
+python-dotenv==1.0.1
+werkzeug==3.0.6
+zipp==3.20.2
